fix header icons spacing

--- a/styles/_font-style.scss
+++ b/styles/_font-style.scss
@@ -170,3 +170,7 @@
 .text-end {
   text-align: end;
 }
+
+.muted {
+  color: var(--grey);
+}
